--- a/language-translation/dlnd_language_translation.ipynb
+++ b/language-translation/dlnd_language_translation.ipynb
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -506,8 +506,10 @@
     "                                                              dec_embed_input, sequence_length, \n",
     "                                                              scope=decoding_scope)\n",
     "    \n",
+    "    \n",
+    "    train_pred = tf.nn.dropout(train_pred, keep_prob)\n",
+    "    \n",
     "    train_logits =  output_fn(train_pred)\n",
-    "    train_logits = tf.nn.dropout(train_logits, keep_prob)\n",
     "    \n",
     "    return train_logits\n",
     "\n",
@@ -531,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -572,7 +574,6 @@
     "    infer_logits, _, _ = tf.contrib.seq2seq.dynamic_rnn_decoder(dec_cell, decoder_fn, \n",
     "                                                                    scope=decoding_scope)\n",
     "    \n",
-    "    infer_logits = tf.nn.dropout(infer_logits, keep_prob)\n",
     "    \n",
     "    return infer_logits\n",
     "\n",
@@ -1033,13 +1034,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def sentence_to_seq(sentence, vocab_to_int):\n",
     "    \"\"\"\n",
@@ -1049,7 +1058,11 @@
     "    :return: List of word ids\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    \n",
+    "    word_list = [vocab_to_int.get(word, vocab_to_int['<UNK>']) for word in sentence.lower().split()]\n",
+    "    \n",
+    "    return word_list\n",
+    "\n",
     "\n",
     "\n",
     "\"\"\"\n",
